# ai-study

./: demo.py  pyproject.toml
.continue/rules/: venv.md
ai_study.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: 01-LLM相关介绍.ipynb  01-LangChain-05-Memory.ipynb  02-deepseek api使用.ipynb  03-mcp.ipynb  04-LangChain-01-Agent.ipynb  04-LangChain-02-Model.ipynb  04-LangChain-03-Message.ipynb  04-LangChain-04-Tool.ipynb  04-LangChain-05-Stream.ipynb  04-LangChain-06-StructureOutput.ipynb
